test/fail_compilation/fail35.d
void main()
{
 for (int t=0; t<33; t++)
  printf("sizeof bittest_T(0) %i\n", (bit[t]).sizeof );
}

